--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "gulp-webp": "^4.0.0",
     "gulp-zip": "^4.2.0",
     "normalize.css": "^8.0.1",
-    "sass": "^1.45.0"
+    "sass": "^1.45.0",
+    "scroll-lock": "^2.1.5",
+    "swiper": "^8.4.5"
   }
 }
